--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
        
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center logo-margin ">
-              <img src="assets/img/logo.png" alt=""/>
+              <p style="font-size: 30px; font-weight: bold; color: #ffffff">PEDRAS</p>
                 </div>
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">                  
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Por favor, informe seu login e senha</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">
