Logar no sistema

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href="assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="assets/plugins/pace/pace-theme-big-counter.css" rel="stylesheet" />
-   <link href="assets/css/style.css" rel="stylesheet" />
-      <link href="assets/css/main-style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/main-style.css" rel="stylesheet" />
+    <link href="css/login.css" rel="stylesheet" />
 
 </head>
 
@@ -23,8 +24,12 @@
               <p style="font-size: 30px; font-weight: bold; color: #ffffff">PEDRAS</p>
                 </div>
             <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-default">                  
+
+                <p class="alerta-login alert alert-success">a</p>
+                <div class="login-panel panel panel-default ">
+
                     <div class="panel-heading">
+
                         <h3 class="panel-title">Por favor, informe seu login e senha</h3>
                     </div>
                     <div class="panel-body">
@@ -42,7 +47,7 @@
                                     </label>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="principal.php" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="#btn" class="btn btn-lg btn-success btn-block btn-logar">Login</a>
                             </fieldset>
                         </form>
                     </div>
@@ -55,6 +60,7 @@
     <script src="assets/plugins/jquery-1.10.2.js"></script>
     <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
     <script src="assets/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 
