--- a/tables.html
+++ b/tables.html
@@ -242,7 +242,7 @@
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i>Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="index.html"><i class="fa fa-sign-out fa-fw"></i>Logout</a>
+                        <li><a href="index.php"><i class="fa fa-sign-out fa-fw"></i>Logout</a>
                         </li>
                     </ul>
                     <!-- end dropdown-user -->
@@ -369,7 +369,7 @@
                                 <a href="blank.html">Blank Page</a>
                             </li>
                             <li>
-                                <a href="index.html">Login Page</a>
+                                <a href="index.php">Login Page</a>
                             </li>
                         </ul>
                         <!-- second-level-items -->
